Fixed bug with RSA decryption failing due to read chunk size being too large.

--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"defaultSDLocation": "C:\\Users\\light\\OneDrive\\Desktop\\EasyRSA"}
+{"defaultSDLocation": "C:/Users/light/OneDrive/Desktop/EasyRSA"}
