--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-psutil==5.9.3
-pycryptodomex==3.15.0
-PySide6==6.4.0
+psutil==5.9.4
+pycryptodomex==3.16.0
+PySide6==6.4.1
 requests==2.28.1
-shiboken6==6.4.0
+shiboken6==6.4.1
 pyperclip==1.8.2
 rsa==4.9.0
 pyqrcode==1.2.1
+pypng==0.20220715.0
