--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,1 @@
-{
-    "defaultSDLocation": "/",
-    "defaultBitLength": "2048"
-}
+{"defaultSDLocation": "C:/Users/light/Desktop/EasyRSA/tests/rsa_chunks", "defaultBitLength": "2048"}
